--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        # 以下にバグの内容を記入してください
+        以下にバグの内容を記入してください
   - type: textarea
     id: what-happened
     attributes:
