--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -5,8 +5,7 @@ labels: ["bug"]
 body:
   - type: markdown
     attributes:
-      value: |
-        以下にバグの内容を記入してください
+      value: 以下にバグの内容を記入してください
   - type: textarea
     id: what-happened
     attributes:
