--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,11 +1,12 @@
 name: バグ報告
 description: バグの報告はここで行います
-title: ""
+title: "ここにバグに関する簡単な説明を記入して下さい"
 labels: ["bug"]
 body:
   - type: markdown
     attributes:
-      value: 以下にバグの内容を記入してください
+      value: |
+        # 以下にバグの内容を記入してください
   - type: textarea
     id: what-happened
     attributes:
