--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -18,7 +18,7 @@ body:
         ## バグの内容
         ジャンプ後に特定の操作を行うと再度ジャンプができる
         
-        ## バグの手順
+        ## バグの再現手順
         1. Xボタン押下
         2. Zボタンを押下
         3. 再度Xボタンを押下
@@ -27,12 +27,12 @@ body:
         どのような操作を行っても一度しかジャンプしない
       placeholder: |
         # バグの内容
-        # バグの手順
+        # バグの再現手順
         # 期待する動作
       value: |
         # バグの内容
 
-        # バグの手順
+        # バグの再現手順
 
         # 期待する動作
         
