fix details for programmer task

--- a/.github/ISSUE_TEMPLATE/programmer_task.yml
+++ b/.github/ISSUE_TEMPLATE/programmer_task.yml
@@ -9,7 +9,7 @@ body:
   - type: textarea
     id: task
     attributes:
-      label: バグの内容
+      label: タスクの内容
       description: |
         どのようなタスクの内容かをここに書きます
 
